v11/docs/ModelsSubjectAlternativeName.md
# ModelsSubjectAlternativeName

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**Id** | Pointer to **int32** |  | [optional] 
**Value** | Pointer to **NullableString** |  | [optional] 
**Type** | Pointer to **int32** |  | [optional] 
**ValueHash** | Pointer to **NullableString** |  | [optional] 

## Methods

### NewModelsSubjectAlternativeName

`func NewModelsSubjectAlternativeName() *ModelsSubjectAlternativeName`

NewModelsSubjectAlternativeName instantiates a new ModelsSubjectAlternativeName object
This constructor will assign default values to properties that have it defined,
and makes sure properties required by API are set, but the set of arguments
will change when the set of required properties is changed

### NewModelsSubjectAlternativeNameWithDefaults

`func NewModelsSubjectAlternativeNameWithDefaults() *ModelsSubjectAlternativeName`

NewModelsSubjectAlternativeNameWithDefaults instantiates a new ModelsSubjectAlternativeName object
This constructor will only assign default values to properties that have it defined,
but it doesn't guarantee that properties required by API are set

### GetId

`func (o *ModelsSubjectAlternativeName) GetId() int32`

GetId returns the Id field if non-nil, zero value otherwise.

### GetIdOk

`func (o *ModelsSubjectAlternativeName) GetIdOk() (*int32, bool)`

GetIdOk returns a tuple with the Id field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetId

`func (o *ModelsSubjectAlternativeName) SetId(v int32)`

SetId sets Id field to given value.

### HasId

`func (o *ModelsSubjectAlternativeName) HasId() bool`

HasId returns a boolean if a field has been set.

### GetValue

`func (o *ModelsSubjectAlternativeName) GetValue() string`

GetValue returns the Value field if non-nil, zero value otherwise.

### GetValueOk

`func (o *ModelsSubjectAlternativeName) GetValueOk() (*string, bool)`

GetValueOk returns a tuple with the Value field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetValue

`func (o *ModelsSubjectAlternativeName) SetValue(v string)`

SetValue sets Value field to given value.

### HasValue

`func (o *ModelsSubjectAlternativeName) HasValue() bool`

HasValue returns a boolean if a field has been set.

### SetValueNil

`func (o *ModelsSubjectAlternativeName) SetValueNil(b bool)`

 SetValueNil sets the value for Value to be an explicit nil

### UnsetValue
`func (o *ModelsSubjectAlternativeName) UnsetValue()`

UnsetValue ensures that no value is present for Value, not even an explicit nil
### GetType

`func (o *ModelsSubjectAlternativeName) GetType() int32`

GetType returns the Type field if non-nil, zero value otherwise.

### GetTypeOk

`func (o *ModelsSubjectAlternativeName) GetTypeOk() (*int32, bool)`

GetTypeOk returns a tuple with the Type field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetType

`func (o *ModelsSubjectAlternativeName) SetType(v int32)`

SetType sets Type field to given value.

### HasType

`func (o *ModelsSubjectAlternativeName) HasType() bool`

HasType returns a boolean if a field has been set.

### GetValueHash

`func (o *ModelsSubjectAlternativeName) GetValueHash() string`

GetValueHash returns the ValueHash field if non-nil, zero value otherwise.

### GetValueHashOk

`func (o *ModelsSubjectAlternativeName) GetValueHashOk() (*string, bool)`

GetValueHashOk returns a tuple with the ValueHash field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetValueHash

`func (o *ModelsSubjectAlternativeName) SetValueHash(v string)`

SetValueHash sets ValueHash field to given value.

### HasValueHash

`func (o *ModelsSubjectAlternativeName) HasValueHash() bool`

HasValueHash returns a boolean if a field has been set.

### SetValueHashNil

`func (o *ModelsSubjectAlternativeName) SetValueHashNil(b bool)`

 SetValueHashNil sets the value for ValueHash to be an explicit nil

### UnsetValueHash
`func (o *ModelsSubjectAlternativeName) UnsetValueHash()`

UnsetValueHash ensures that no value is present for ValueHash, not even an explicit nil

[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)


